--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voting-server",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "6.5.1",
     "babel-cli": "6.5.1",
+    "babel-core": "6.5.1",
     "babel-preset-es2015": "6.5.0",
     "chai": "3.5.0",
     "chai-immutable": "1.5.3",
+    "check-word": "^1.1.0",
     "mocha": "2.4.5"
   },
   "dependencies": {
@@ -24,6 +25,8 @@
     "socket.io": "1.4.5"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
