--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "immutable": "3.7.6",
+    "jsonfile": "^4.0.0",
+    "npm": "^5.7.1",
     "redux": "3.3.1",
     "socket.io": "1.4.5"
   },
