--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "fiesta": "babel-node index.js",
-    "test": "mocha --compilers js:babel-core/register  --require ./test/test_helper.js  --recursive"
+    "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "author": "",
   "license": "ISC",
